--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content: blob:">
   <meta http-equiv="X-Content-Security-Policy"
     content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content: blob:" />
-  <link rel="stylesheet" href="../../dist/styles/style.css" />
+  <link rel="stylesheet" href="dist/styles/style.css" />
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://unpkg.com/realm-web/dist/bundle.iife.js"></script>
-  <script src="sweetalert2.all.min.js"></script>
+  <script src="src/index/sweetalert2.all.min.js"></script>
 </head>
 
 <body>
@@ -68,9 +68,9 @@
         </div>
     </div> -->
 
-    <script src="../../dist/index/ts/songs.js" type="module" defer></script>
-    <script src="../../dist/index/ts/bible.js" type="module" defer></script>
-    <script src="../../dist/index/ts/mongo.js" type="module" defer></script>
+    <script src="dist/index/ts/songs.js" type="module" defer></script>
+    <script src="dist/index/ts/bible.js" type="module" defer></script>
+    <script src="dist/index/ts/mongo.js" type="module" defer></script>
 </body>
 
 </html>
